--- a/Guess the Animal/task/src/main/resources/messages.properties
+++ b/Guess the Animal/task/src/main/resources/messages.properties
@@ -1,51 +1,138 @@
+guess.game.session.menu.welcome.display=\nWelcome to the animal expert system!
+guess.game.session.favorite.animal.request.text=Which animal do you like most?
+guess.game.session.animal.nice= Nice!\fGreat!\fWonderful!\fAwesome!\fExcellent!\fMarvelous!
+
 guess.game.session.start.text=\nI want to learn about animals.
 guess.game.session.start.tree.loaded.text=\nI know a lot about animals.
-guess.game.session.start.play.text=\nLet's play a game.session!
-guess.game.session.favorite.animal.request.text=Which animal do you like most?
+guess.game.session.start.play.text=\nLet's play a game!
 guess.game.session.animal.in.mind.request.text=I give up. What animal do you have in mind?
 guess.game.session.start.ready.text=Wonderful! I've learned so much about animals!
 guess.game.session.instruction.text=\nYou think of an animal, and I guess it.\nPress enter when you're ready.
-guess.game.session.play.again.text=Would you like to play again?
-guess.game.session.facts.learned.text=I learned the following facts about animals:%n%s%nI can distinguish these animals by asking the question:%n- %s%n
-guess.game.session.learning.finished.text=Nice! I've learned so much about animals!
+
+guess.game.session.play.again.text=\
+    Want to try again?\f\
+    Would you like to play again?\f\
+    Do you want to repeat?\f\
+    Want to play again?\f\
+    One more game?\f\
+    Do you want to play again?\f\
+    Would you like to play again?
+
+# Ask user again for a closed (Yes/No) question
+guess.game.session.ask.again=\
+    Come on, yes or no?\f\
+    Please enter yes or no.\f\
+    Funny, I still don't understand, is it yes or no?\f\
+    Sorry, it must be yes or no.\f\
+    Let's try again: yes or no?\f\
+    I'm not sure I caught you: was it yes or no?\f\
+    Oh, it's too complicated for me: just say me yes or no.\f\
+    I'm filling a bit intrigued: just say yes or no.\f\
+    I am a bit confused, give me a simple answer: yes or no\f\
+    Oh, no, don't try to confuse me: say yes or no.\f\
+    Could you please simply say yes or no?\f\
+    Sorry, may I ask you again: was it yes or no?
+
+guess.game.session.thanks=\
+    That was funny! \f\
+    It was nice to play with you! \f\
+    It was a pleasure for me to know you better! \f\
+    Thank you for playing! \f\
+    Thank you! I had too much fun!
+
+guess.game.session.farewell=\
+    Bye!\f\
+    Bye, bye!\f\
+    See you later!\f\
+    See you soon!\f\
+    Talk to you later!\f\
+    Goodbye\f\
+    Bye! Have a good day.\f\
+    Bye! Take care.\f\
+    Bye! Take it easy.\f\
+    It was greet to speech with you, but I've to go. Goodbye!\f\
+    I'm off!\f\
+    It was nice seeing you!\f\
+    See ya!\f\
+    See you later, alligator!\f\
+    In a while, crocodile!\f\
+    Hasta la vista, baby!\f\
+    Adios, amigos!\f\
+    Au revoir!\f\
+    Adieu!\f\
+    Have a nice one!
+
+guess.game.session.learning.finished.text=\ I've learned so much about animals!
 guess.game.session.guessing.correct.text=It's great that I got it right!\nI didn't even hope that it would be possible to guess!
-guess.game.session.statement.verification.text=Is the statement correct for %s?
+guess.game.session.statement.verification.text=Is the statement correct for {0}?
 guess.game.session.loading.failure.text=Loading tree from local storage failed!
 guess.game.session.save.failure.text=Saving tree from local storage failed!
+
+guess.game.session.facts.learned.text=I learned the following facts about animals:%n%s%nI can distinguish these animals by asking the question:%n- %s%n
 guess.game.session.distinguishing.fact.request.text=Specify a fact that distinguishes %s from %s.\nThe sentence should satisfy one of the following templates:\n- It can ...\n- It has ...\n- It is a/an ...%n
+
+# Application Menu
+
+# Menu properties
 guess.game.session.menu.display=\nWhat do you want to do:
-guess.game.session.menu.welcome.display=\nWelcome to the animal expert system!
+
+# Menu items
 guess.game.session.menu.item.play=Play the guessing game
+guess.game.session.menu.item.delete= Delete an animal
 guess.game.session.menu.item.list=List of all animals
-guess.game.session.menu.list.result=Here are the animals I know:
-guess.game.session.menu.item.search=Search for an animal
-guess.game.session.animal.fact=Facts about the %s:%n
-guess.game.session.animal.fact.empty=No facts about the %s.%n
-guess.game.session.menu.item.search.query.enter.request=Enter the animal:
 guess.game.session.menu.item.statistics=Calculate statistics
-guess.game.session.statistics.header=The Knowledge Tree stats
-guess.game.session.statistics.root=root node
-guess.game.session.statistics.nodes=total number of nodes
-guess.game.session.statistics.animals=total number of animals
-guess.game.session.statistics.statements=total number of statements
-guess.game.session.statistics.height=height of the tree
-guess.game.session.statistics.min.depth=minimum animal's depth
-guess.game.session.statistics.avg.depth=average animal's depth
+guess.game.session.menu.item.search=Search for an animal
 guess.game.session.menu.item.print=Print the Knowledge Tree
 guess.game.session.menu.item.exit=Exit
+
+guess.game.session.menu.item.error=Please enter the number from 0 up to %s
 guess.game.session.menu.item.choice=Your choice:
 
-# Greeting messages
-greeting.morning.text=Good morning!
-greeting.afternoon.text=Good afternoon!
-greeting.evening.text=Good evening!
-greeting.night_owl.text=Hi, Night Owl
-greeting.early_bird.text=Hi, Early Bird
+# The Knowledge Tree Statistics
+# statistic
+guess.game.session.statistics.title       =The Knowledge Tree stats
+guess.game.session.statistics.root         =- root node                    %s
+guess.game.session.statistics.nodes        =- total number of nodes        %s
+guess.game.session.statistics.animals      =- total number of animals      %s
+guess.game.session.statistics.statements   =- total number of statements   %s
+guess.game.session.statistics.height       =- height of the tree           %s
+guess.game.session.statistics.minimum      =- minimum depth                %s
+guess.game.session.statistics.average      =- average depth                %s
 
-# Verb
-guess.game.session.negation.verb.has=doesn't have
-guess.game.session.interrogation.verb.has=Does it have
-guess.game.session.negation.verb.is=isn't
-guess.game.session.interrogation.verb.is=Is it
-guess.game.session.negation.verb.can=can't
-guess.game.session.interrogation.verb.can=Can it
+# Search an animal
+guess.game.session.menu.list.result=Here are the animals I know:
+guess.game.session.tree.search.facts    = Facts about the %s:
+guess.game.session.tree.search.noFacts  = No facts about the %s.
+guess.game.session.animal.prompt       = Enter the animal:
+guess.game.session.animal.error        =\
+    The animal should be entered in the following format:\n\
+    a/an + name of the animal, for example, 'an elephant'.
+
+# This property is format for printf method
+guess.game.session.tree.search.printf    =\ - %s%n
+
+# Delete an animal
+guess.game.session.tree.delete.root        = Can't delete the only animal from the root.
+guess.game.session.tree.delete.successful  = The %s was deleted from the knowledge base.
+guess.game.session.tree.delete.fail        = The %s was not found in the knowledge base.
+
+# time
+guess.game.session.morning.time.start      = 05:00
+guess.game.session.morning.time.end        = 12:00
+guess.game.session.afternoon.time.start    = 12:00
+guess.game.session.afternoon.time.end      = 18:00
+guess.game.session.evening.time.start      = 18:00
+guess.game.session.night.time.start        = 00:00
+guess.game.session.night.time.end          = 05:00
+guess.game.session.early.time.start        = 05:00
+guess.game.session.early.time.end          = 09:00
+
+christmas.date.after    = 12-20
+christmas.date.before   = 12-26
+
+# Greeting messages
+guess.game.greeting.morning.text=Good morning!
+guess.game.greeting.afternoon.text=Good afternoon!
+guess.game.greeting.evening.text=Good evening!
+guess.game.greeting.night_owl.text=Hi, Night Owl
+guess.game.greeting.early_bird.text=Hi, Early Bird
