--- a/Guess the Animal/task/src/main/resources/messages_eo.properties
+++ b/Guess the Animal/task/src/main/resources/messages_eo.properties
@@ -51,7 +51,7 @@ guess.game.session.statement.verification.text=\u0108u la aserto \u011Dustas por
 guess.game.session.loading.failure.text=\u015Cargado de arbo el loka stokado malsukcesis!
 guess.game.session.save.failure.text=Konservado de arbo el loka stokado malsukcesis!
 
-guess.game.session.facts.learned.text=Mi lernis la jenajn faktojn pri bestoj:%n%s%nMi povas distingi \u0109i tiujn bestojn demandante la demandon:%n- %s%n
+guess.game.session.facts.learned.text=Mi lernis la jenajn faktojn pri bestoj:\n{0}\nMi povas distingi \u0109i tiujn bestojn demandante la demandon:\n- {1}
 guess.game.session.distinguishing.fact.request.text=indiku fakton, kiu distingas {0} de {1}.\nLa frazo devus kontentigi unu el la jenaj \u015Dablonoj:\n- \u011Ci povas ...\n- \u011Ci havas ...\n- \u011Ci estas ...%n
 
 # Application Menu
@@ -68,36 +68,36 @@ guess.game.session.menu.item.search= Ser\u0109i beston
 guess.game.session.menu.item.print= Printi la Sciarbon
 guess.game.session.menu.item.exit= Eliri
 
-guess.game.session.menu.item.error= Bonvolu enigi la numeron de 0 \u011Dis %s
+guess.game.session.menu.item.error= Bonvolu enigi la numeron de 0 \u011Dis {0}
 guess.game.session.menu.item.choice=Via elekto
 
 # The Knowledge Tree Statistics
 # statistic
 guess.game.session.statistics.title       =La statistiko de la Scio-Arbo
-guess.game.session.statistics.root        =- radika nodo                  %s
-guess.game.session.statistics.nodes       =- totala nombro de nodoj       %s
-guess.game.session.statistics.animals     =- totala nombro de bestoj      %s
-guess.game.session.statistics.statements  =- totala nombro de deklaroj    %s
-guess.game.session.statistics.height      =- alteco de la arbo            %s
-guess.game.session.statistics.minimum     =- minimuma profundo            %s
-guess.game.session.statistics.average     =- avera\u011Da profundo            %s
+guess.game.session.statistics.root        =- radika nodo                  {0}
+guess.game.session.statistics.nodes       =- totala nombro de nodoj       {0}
+guess.game.session.statistics.animals     =- totala nombro de bestoj      {0}
+guess.game.session.statistics.statements  =- totala nombro de deklaroj    {0}
+guess.game.session.statistics.height      =- alteco de la arbo            {0}
+guess.game.session.statistics.minimum     =- minimuma profundo            {0}
+guess.game.session.statistics.average     =- avera\u011Da profundo             {0}
 
 # Search an animal
 guess.game.session.menu.list.result= Jen la bestoj, kiujn mi konas:
-guess.game.session.tree.search.facts    = Faktoj pri la %s:
-guess.game.session.tree.search.noFacts  = Neniuj faktoj pri la %s.
+guess.game.session.tree.search.facts    = Faktoj pri la {0}:
+guess.game.session.tree.search.noFacts  = Neniuj faktoj pri la {0}.
 guess.game.session.animal.prompt       = Enigu la nomon de besto:
 guess.game.session.animal.error        =\
     La besto devas esti enmetita en la jenan formaton: \n\
     nomo de la besto, ekzemple, "elefanto".
 
 # This property is format for printf method
-guess.game.session.tree.search.printf    =\ - %s%n
+guess.game.session.tree.search.printf    =\ - {0}
 
 # Delete an animal
 guess.game.session.tree.delete.root        = Ne eblas forigi la solan beston de la radiko.
-guess.game.session.tree.delete.successful  = La %s estis forigita de la sciobazo.
-guess.game.session.tree.delete.fail        = La %s ne estis trovita en la sciobazo.
+guess.game.session.tree.delete.successful  = La {0} estis forigita de la sciobazo.
+guess.game.session.tree.delete.fail        = La {0} ne estis trovita en la sciobazo.
 
 # time
 guess.game.session.morning.time.start      = 05:00
