--- a/Guess the Animal/task/src/main/resources/messages.properties
+++ b/Guess the Animal/task/src/main/resources/messages.properties
@@ -68,8 +68,8 @@ guess.game.session.statement.verification.text=Is the statement correct for {0}?
 guess.game.session.loading.failure.text=Loading tree from local storage failed!
 guess.game.session.save.failure.text=Saving tree from local storage failed!
 
-guess.game.session.facts.learned.text=I learned the following facts about animals:%n%s%nI can distinguish these animals by asking the question:%n- %s%n
-guess.game.session.distinguishing.fact.request.text=Specify a fact that distinguishes %s from %s.\nThe sentence should satisfy one of the following templates:\n- It can ...\n- It has ...\n- It is a/an ...%n
+guess.game.session.facts.learned.text=I learned the following facts about animals:\n{0}\nI can distinguish these animals by asking the question:\n- {1}
+guess.game.session.distinguishing.fact.request.text=Specify a fact that distinguishes {0} from {1}.\nThe sentence should satisfy one of the following templates:\n- It can ...\n- It has ...\n- It is a/an ...%n
 
 # Application Menu
 
@@ -85,36 +85,36 @@ guess.game.session.menu.item.search=Search for an animal
 guess.game.session.menu.item.print=Print the Knowledge Tree
 guess.game.session.menu.item.exit=Exit
 
-guess.game.session.menu.item.error=Please enter the number from 0 up to %s
+guess.game.session.menu.item.error=Please enter the number from 0 up to {0}
 guess.game.session.menu.item.choice=Your choice:
 
 # The Knowledge Tree Statistics
 # statistic
 guess.game.session.statistics.title       =The Knowledge Tree stats
-guess.game.session.statistics.root         =- root node                    %s
-guess.game.session.statistics.nodes        =- total number of nodes        %s
-guess.game.session.statistics.animals      =- total number of animals      %s
-guess.game.session.statistics.statements   =- total number of statements   %s
-guess.game.session.statistics.height       =- height of the tree           %s
-guess.game.session.statistics.minimum      =- minimum depth                %s
-guess.game.session.statistics.average      =- average depth                %s
+guess.game.session.statistics.root         =- root node                    {0}
+guess.game.session.statistics.nodes        =- total number of nodes        {0}
+guess.game.session.statistics.animals      =- total number of animals      {0}
+guess.game.session.statistics.statements   =- total number of statements   {0}
+guess.game.session.statistics.height       =- height of the tree           {0}
+guess.game.session.statistics.minimum      =- minimum depth                {0}
+guess.game.session.statistics.average      =- average depth                {0}
 
 # Search an animal
 guess.game.session.menu.list.result=Here are the animals I know:
-guess.game.session.tree.search.facts    = Facts about the %s:
-guess.game.session.tree.search.noFacts  = No facts about the %s.
+guess.game.session.tree.search.facts    = Facts about the {0}:
+guess.game.session.tree.search.noFacts  = No facts about the {0}.
 guess.game.session.animal.prompt       = Enter the animal:
 guess.game.session.animal.error        =\
     The animal should be entered in the following format:\n\
     a/an + name of the animal, for example, 'an elephant'.
 
 # This property is format for printf method
-guess.game.session.tree.search.printf    =\ - %s%n
+guess.game.session.tree.search.printf    =\ - {0}
 
 # Delete an animal
 guess.game.session.tree.delete.root        = Can't delete the only animal from the root.
-guess.game.session.tree.delete.successful  = The %s was deleted from the knowledge base.
-guess.game.session.tree.delete.fail        = The %s was not found in the knowledge base.
+guess.game.session.tree.delete.successful  = The {0} was deleted from the knowledge base.
+guess.game.session.tree.delete.fail        = The {0} was not found in the knowledge base.
 
 # time
 guess.game.session.morning.time.start      = 05:00
