CHG: Edit StatisticCommand.java

--- a/Guess the Animal/task/src/main/resources/messages.properties
+++ b/Guess the Animal/task/src/main/resources/messages.properties
@@ -91,13 +91,13 @@ guess.game.session.menu.item.choice=Your choice:
 # The Knowledge Tree Statistics
 # statistic
 guess.game.session.statistics.title       =The Knowledge Tree stats
-guess.game.session.statistics.root         =- root node                    {0}
-guess.game.session.statistics.nodes        =- total number of nodes        {0}
-guess.game.session.statistics.animals      =- total number of animals      {0}
-guess.game.session.statistics.statements   =- total number of statements   {0}
-guess.game.session.statistics.height       =- height of the tree           {0}
-guess.game.session.statistics.minimum      =- minimum depth                {0}
-guess.game.session.statistics.average      =- average depth                {0}
+guess.game.session.statistics.overview    =- root node                    {0}\n\
+  \- total number of nodes        {1}\n\
+  \- total number of animals      {2}\n\
+  \- total number of statements   {3}\n\
+  \- height of the tree           {4}\n\
+  \- minimum depth                {5}\n\
+  \- average depth                {6}
 
 # Search an animal
 guess.game.session.menu.list.result=Here are the animals I know:
