--- a/Guess the Animal/task/src/main/resources/messages_eo.properties
+++ b/Guess the Animal/task/src/main/resources/messages_eo.properties
@@ -74,13 +74,14 @@ guess.game.session.menu.item.choice=Via elekto
 # The Knowledge Tree Statistics
 # statistic
 guess.game.session.statistics.title       =La statistiko de la Scio-Arbo
-guess.game.session.statistics.root        =- radika nodo                  {0}
-guess.game.session.statistics.nodes       =- totala nombro de nodoj       {0}
-guess.game.session.statistics.animals     =- totala nombro de bestoj      {0}
-guess.game.session.statistics.statements  =- totala nombro de deklaroj    {0}
-guess.game.session.statistics.height      =- alteco de la arbo            {0}
-guess.game.session.statistics.minimum     =- minimuma profundo            {0}
-guess.game.session.statistics.average     =- avera\u011Da profundo             {0}
+
+guess.game.session.statistics.overview    =- radika nodo                    {0}\n\
+  \- totala nombro de nodoj        {1}\n\
+  \- totala nombro de bestoj      {2}\n\
+  \- totala nombro de deklaroj   {3}\n\
+  \- alteco de la arbo           {4}\n\
+  \- minimuma profundo                {5}\n\
+  \- avera\u011Da profundo                {6}
 
 # Search an animal
 guess.game.session.menu.list.result= Jen la bestoj, kiujn mi konas:
