--- a/Guess the Animal/task/src/main/resources/messages.properties
+++ b/Guess the Animal/task/src/main/resources/messages.properties
@@ -62,14 +62,14 @@ guess.game.session.farewell=\
     Adieu!\f\
     Have a nice one!
 
-guess.game.session.learning.finished.text=\ I've learned so much about animals!
+guess.game.session.learning.finished.text=\ I"ve learned so much about animals!
 guess.game.session.guessing.correct.text=It's great that I got it right!\nI didn't even hope that it would be possible to guess!
 guess.game.session.statement.verification.text=Is the statement correct for {0}?
 guess.game.session.loading.failure.text=Loading tree from local storage failed!
 guess.game.session.save.failure.text=Saving tree from local storage failed!
 
 guess.game.session.facts.learned.text=I learned the following facts about animals:\n{0}\nI can distinguish these animals by asking the question:\n- {1}
-guess.game.session.distinguishing.fact.request.text=Specify a fact that distinguishes {0} from {1}.\nThe sentence should satisfy one of the following templates:\n- It can ...\n- It has ...\n- It is a/an ...%n
+guess.game.session.distinguishing.fact.request.text=Specify a fact that distinguishes {0} from {1}.\nThe sentence should satisfy one of the following templates:\n- It can ...\n- It has ...\n- It is a/an ...
 
 # Application Menu
 
